@@ -177,6 +177,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #16255: subrocess.Popen uses /system/bin/sh on Android as the shell,
+  instead of /bin/sh.
+
 - Issue #28779: multiprocessing.set_forkserver_preload() would crash the
   forkserver process if a preloaded module instantiated some
   multiprocessing objects such as locks.
